--- a/public/assets/views/partials/nav.html
+++ b/public/assets/views/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- start: SEARCH FORM -->
-<div class="search-form">
+<!--<div class="search-form">
 	<a class="s-open" href="#">
 		<i class="ti-search"></i>
 	</a>
@@ -14,11 +14,11 @@
 			</button>
 		</div>
 	</form>
-</div>
+</div>-->
 <!-- end: SEARCH FORM -->
 <!-- start: MAIN NAVIGATION MENU -->
 <div class="navbar-title">
-	<span translate="sidebar.heading.NAVIGATION"> RenCars </span>
+	<span> <h3> RenCars </h3> </span>
 </div>
 <ul class="main-navigation-menu">
 	<li ui-sref-active="active">
