--- a/public/assets/views/partials/nav.html
+++ b/public/assets/views/partials/nav.html
@@ -71,8 +71,8 @@
 					<i class="ti-settings"></i>
 				</div>
 				<div class="item-inner">
-					<a ui-sref="app.employees-list">
-					<span class="title"> Employees </span>
+					<a ui-sref="app.customers-list">
+					<span class="title"> Customers </span>
 					 <i class="icon icon-envelope"></i>
 				</div>
 			</div>
