--- a/public/assets/views/partials/nav.html
+++ b/public/assets/views/partials/nav.html
@@ -17,9 +17,9 @@
 </div>-->
 <!-- end: SEARCH FORM -->
 <!-- start: MAIN NAVIGATION MENU -->
-<div class="navbar-title">
+<!--<div class="navbar-title">
 	<span> <h3> RenCars </h3> </span>
-</div>
+</div>-->
 <ul class="main-navigation-menu">
 	<li ui-sref-active="active">
 		<a ui-sref="app.dashboard">
@@ -102,6 +102,18 @@
 					<a ui-sref="app.transactions-list">
 					<span class="title"> Transactions </span>
 					 <i class="icon icon-envelope"></i>
+				</div>
+			</div>
+		</a>
+	</li>
+	<li ui-sref-active="active" >
+		<a ui-sref="app.users-password"> <!-- Link Ganti Password -->
+			<div class="item-content">
+				<div class="item-media">
+					<i class="ti-id-badge"></i>
+				</div>
+				<div class="item-inner">
+					<span class="title"> Ganti Password </span>
 				</div>
 			</div>
 		</a>
