--- a/public/assets/views/dashboard.html
+++ b/public/assets/views/dashboard.html
@@ -110,41 +110,19 @@
 				<div class="col-md-7 col-lg-8">
 					<div class="panel panel-white no-radius" id="visits">
 						<div class="panel-heading border-light">
-							<h4 class="panel-title"> Visits </h4>
+							<h4 class="panel-title"> Penyewa </h4>
 							<ul class="panel-heading-tabs border-light">
-								<li>
-									<div class="pull-right">
-										<div class="btn-group" uib-dropdown is-open="status.isopen">
-											<a uib-dropdown-toggle ng-disabled="disabled" class="padding-10">
-												<i class="ti-more-alt "></i>
-											</a>
-											<ul class="dropdown-menu dropdown-light" role="menu">
-												<li>
-													<a href="#">
-														Action
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														Another action
-													</a>
-												</li>
-												<li>
-													<a href="#">
-														Something else here
-													</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</li>
-								<li>
-									<div class="rate">
-										<i class="fa fa-caret-up text-primary"></i><span class="value">15</span><span class="percentage">%</span>
-									</div>
-								</li>
+								<!--<li>-->
+									<!--<div class="pull-right">-->
+										<!--<div class="btn-group" uib-dropdown is-open="status.isopen">-->
+											<!--<a uib-dropdown-toggle ng-disabled="disabled" class="padding-10">-->
+												<!--<i class="ti-more-alt "></i>-->
+											<!--</a>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</li>-->
 								<li class="panel-tools">
-									<ct-paneltool tool-refresh="load1"></ct-paneltool>
+									<ct-paneltool tool-refresh="load1()"></ct-paneltool>
 								</li>
 							</ul>
 						</div>
