--- a/public/assets/views/dashboard.html
+++ b/public/assets/views/dashboard.html
@@ -61,10 +61,15 @@
 							 <i class="fa fa-square fa-stack-2x text-primary"></i> <i class="fa fa-smile-o fa-stack-1x fa-inverse">
 						
 						</i> </span>
-					<h2 class="StepTitle">Manage Users</h2>
+					<h2 class="StepTitle">Customers</h2>
+					<span >
 					<p class="text-small" ng-controller="VisitsCtrl">
+					<a ui-sref="app.customers-list">
 						{{jumlahcustomes}}
+					</a>
 					</p>
+					</a>
+					</span>
 					<p class="links cl-effect-1">
 						<a href>
 							view more
@@ -76,10 +81,15 @@
 		<div class="col-sm-4">
 			<div class="panel panel-white no-radius text-center">
 				<div class="panel-body">
-					<span class="fa-stack fa-2x"> <i class="fa fa-square fa-stack-2x text-primary"></i> <i class="fa fa-paperclip fa-stack-1x fa-inverse"></i> </span>
-					<h2 class="StepTitle">Manage Orders</h2>
-					<p class="text-small">
-						The Manage Orders tool provides a view of all your orders.
+					<span class="fa-stack fa-2x"> 
+												 <a ui-sref="app.transactions-create">
+
+						<i class="fa fa-square fa-stack-2x text-primary"></i> <i class="fa fa-paperclip fa-stack-1x fa-inverse"></i> </span>
+					<h2 class="StepTitle">Orders</h2>
+					<p class="text-small"ng-controller="VisitsCtrl">
+												 <a ui-sref="app.transactions-list">
+						{{jumlahtransactions}}
+						</span>
 					</p>
 					<p class="cl-effect-1">
 						<a href>
